--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,7 +157,7 @@ a.nav-link {
     2px -2px 5px rgba(153, 11, 219, 0.2) inset,
     2px 2px 15px rgba(0, 0, 0, 0.4);
     
-    border-radius: 5px 20px ;
+    border-radius: 20px ;
 }
 
 #aboutSVG {
