--- a/assets/labs/CITS2506-Lab-04/style.css
+++ b/assets/labs/CITS2506-Lab-04/style.css
@@ -4,6 +4,7 @@ html {
 }
 
  /* ifrome Scroll Bar Removal Fix */
+ /* https://stackoverflow.com/questions/16670931/hide-scroll-bar-but-while-still-being-able-to-scroll */
  ::-webkit-scrollbar {
   display: none;
 }
