--- a/assets/labs/CIT2506-Lab-06/style.css
+++ b/assets/labs/CIT2506-Lab-06/style.css
@@ -175,6 +175,7 @@ footer {
 
 
 /* ifrome Scroll Bar Removal Fix */
+/* https://stackoverflow.com/questions/16670931/hide-scroll-bar-but-while-still-being-able-to-scroll */
 ::-webkit-scrollbar {
     display: none;
 }
